# pyapp

./: Cargo.toml  README.md  build.rs  demo.script  rustfmt.toml
.github/workflows/: CI.yml
assets/themes/: Base16 Ocean Dark.tmTheme
cli/: build  clean  run  test
package/: pyapp
py/: init.py
py/utils/: foo.py
src/: app.rs  args.rs  main.rs  py.rs
tests/: run.sh  test1.py  test2.py
