[package]
name = "pyapp"
version = "0.1.0"
edition = "2021"
[workspace.dependencies]
rustyline = { git = "https://github.com/zao111222333/rustyline.git", branch = "highlight", features = ["custom-bindings", "derive", "continuation-prompt"]}
# rustyline = { path = "../gwenn-rustyline", features = ["custom-bindings", "derive", "continuation-prompt"]}

[dependencies]
thiserror = "1.0"
pyo3 = { version = "0.22.0", features = ["experimental-inspect"] }
kdam = { version = "0.5.2", features = ["rich", "spinner"] }
rustyline = { workspace = true }

[build-dependencies]
rustyline = { workspace = true }